@@ -169,10 +169,10 @@ NSInteger ccLoadFileIntoMemory(const char *filename, unsigned char **out)
 
 	// It should be an iPhone in non Retina Display mode. So, do nothing
 	else
-		*resolutionType = kCCResolutionStandard;
+		*resolutionType = kCCResolutioniPhone;
 
 	if( ! ret ) {
-		*resolutionType = kCCResolutionStandard;
+		*resolutionType = kCCResolutioniPhone;
 		ret = fullpath;
 	}
 
