@@ -1,8 +1,10 @@
 version 2.0-rc0 11-Feb-2012
 . [NEW] LabelTTF: fontName and fontSize are properties
 . [NEW] LabelBMFont: added setFntFile method
-. [FIX] SpriteBatch: Quad extensions are public
 . [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
+. [FIX] SpriteBatch: Quad extensions are public
+. [FIX] Texture2D: initWithImage renamed with initWithCGImage
+. [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone
 
 version 2.0-beta2 17-Jan-2012
 . [NEW] v1.1 Forward-ported changes:
